--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<time>Hello Coursera!</time>
+	<title>TUSHAR'S 1st Site</title>
 </head>
 <body>
-	<h1>HELLO COURSERA!</h1>
+	<h1>THANKS COURSERA!</h1>
 </body>
 </html>
