--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>READY PLAYER ONE</title>
+	<title>SITE FOR FUN</title>
 </head>
 <body>
-	<h1>THANKS COURSERA FOR YOUR HELP</h1>
+	<h1>READY PLAYER ONE!!</h1>
+	<h2>THANKS COURSERA FOR YOUR HELP</h2>
 </body>
 </html>
