last practice change

--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SITE FOR FUN</title>
+	<title>TUSHAR GUPTA</title>
 </head>
 <body>
-	<h1>READY PLAYER ONE!!</h1>
+	<h1>HELLO, WELCOME TO THE FUTURE, TUSHAR!!</h1>
 	<h2>THANKS COURSERA FOR YOUR HELP</h2>
 </body>
 </html>
