--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TUSHAR GUPTA</title>
+	<title>TG COURSERA - TEST </title>
 </head>
+<style>
+	body{
+		  background-color: black;
+	}
+h1,h2 {
+  color: white;
+  font-size: 30px;
+  text-align: center;
+}
+</style>
 <body>
-	<h1>HELLO, WELCOME TO THE FUTURE, TUSHAR!!</h1>
+	<h1>HELLO AND WELCOME!!</h1>
+	<br><br>
 	<h2>THANKS COURSERA FOR YOUR HELP</h2>
 </body>
 </html>
